fix: update wtcl engine reference

--- a/reference_engine_ini/V8SC_E85_Engine.ini
+++ b/reference_engine_ini/V8SC_E85_Engine.ini
@@ -37,8 +37,8 @@ RPMTorque=( 8750.0, -498.2, 446.7)
 RPMTorque=( 9000.0, -525.4, 400.9)
 RPMTorque=( 9250.0, -557.7, 341.5)
 RPMTorque=( 9500.0, -590.0, 282.2)
-FuelConsumption=5.5e-5
-FuelEstimate=0.710
+FuelConsumption=8.3e-5 //7.23e-5
+FuelEstimate=0.73 //0.71 0.826 0.970
 EngineInertia=0.215
 IdleThrottle=0.6
 IdleRPMLogic=(1100.0, 1200.0)
@@ -60,7 +60,7 @@ WaterMinimumCooling=2.000e-003                // base heat dissipated without ve
 RadiatorCooling=(1.56e-4, 8.7e-6)             // cooling rate with velocity (base, per setting) 
 LifetimeEngineRPM=(7000.0,250.0)              // base engine speed for lifetime, range where lifetime is halved
 LifetimeOilTemp=(100,10.0)                    // base oil temp for lifetime, range where lifetime is halved
-LifetimeAvg=54000                            
+LifetimeAvg=54000                             // average lifetime in seconds
 LifetimeVar=5000                              // lifetime random variance
 EngineEmission=(0.00, 0.71, -3.15)
 EngineSound=(-0.20, 0.70, -2.2)
