feat: can reverse for rumble, and can read from batch.ini file

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@ results.xlsx
 test.xlsx
 wtcl-sprint-race-grid.txt
 jtcl-feature-race-grid.txt
+rumble-feature-race-grid.txt
+rumble-reverse-race-grid.txt
